// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge组件 快照测试 基本使用 1`] = `
<span
  className="sc-gsDKAQ bVtXRC sinoui-badge"
>
  <svg
    aria-hidden="true"
    className="sc-bdvvtL dKoNSA sinoui-svg-icon"
    fill="currentColor"
    focusable="false"
    height={24}
    role="presentation"
    size={24}
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
    />
  </svg>
</span>
`;

exports[`Badge组件 快照测试 指定封顶数值 1`] = `
Array [
  <span
    className="sc-gsDKAQ bVtXRC sinoui-badge"
  >
    <span
      className="sc-dkPtRN dAiBIr"
      color="error"
    >
      99
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdvvtL dKoNSA sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
    className="sc-gsDKAQ bVtXRC sinoui-badge"
  >
    <span
      className="sc-dkPtRN eKRFNO"
      color="error"
    >
      99+
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdvvtL dKoNSA sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
]
`;

exports[`Badge组件 快照测试 指定数字 1`] = `
<span
  className="sc-gsDKAQ bVtXRC sinoui-badge"
>
  <span
    className="sc-dkPtRN dAiBIr"
    color="error"
  >
    8
  </span>
  <svg
    aria-hidden="true"
    className="sc-bdvvtL dKoNSA sinoui-svg-icon"
    fill="currentColor"
    focusable="false"
    height={24}
    role="presentation"
    size={24}
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
    />
  </svg>
</span>
`;

exports[`Badge组件 快照测试 指定颜色 1`] = `
Array [
  <span
    className="sc-gsDKAQ bVtXRC sinoui-badge"
  >
    <span
      className="sc-dkPtRN gkJaUh"
      color="primary"
    >
      99
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdvvtL dKoNSA sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
    className="sc-gsDKAQ bVtXRC sinoui-badge"
  >
    <span
      className="sc-dkPtRN ezqrWy"
      color="secondary"
    >
      99
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdvvtL dKoNSA sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
    className="sc-gsDKAQ bVtXRC sinoui-badge"
  >
    <span
      className="sc-dkPtRN eLWxmy"
      color="warning"
    >
      99
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdvvtL dKoNSA sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
    className="sc-gsDKAQ bVtXRC sinoui-badge"
  >
    <span
      className="sc-dkPtRN fYzuIK"
      color="success"
    >
      99
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdvvtL dKoNSA sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
    className="sc-gsDKAQ bVtXRC sinoui-badge"
  >
    <span
      className="sc-dkPtRN dAiBIr"
      color="error"
    >
      99
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdvvtL dKoNSA sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
    className="sc-gsDKAQ bVtXRC sinoui-badge"
  >
    <span
      className="sc-dkPtRN kUXMUO"
      color="info"
    >
      99
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdvvtL dKoNSA sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
]
`;

exports[`Badge组件 快照测试 设置为圆点形式 1`] = `
<span
  className="sc-gsDKAQ bVtXRC sinoui-badge sinoui-badge--dot"
>
  <span
    className="sc-dkPtRN cAONeW"
    color="error"
  />
  <svg
    aria-hidden="true"
    className="sc-bdvvtL dKoNSA sinoui-svg-icon"
    fill="currentColor"
    focusable="false"
    height={24}
    role="presentation"
    size={24}
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
    />
  </svg>
</span>
`;

exports[`Badge组件 快照测试 设置徽标的显示位置 1`] = `
Array [
  <span
    className="sc-gsDKAQ bVtXRC sinoui-badge"
  >
    <span
      className="sc-dkPtRN dAiBIr"
      color="error"
    >
      8
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdvvtL dKoNSA sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
    className="sc-gsDKAQ bVtXRC sinoui-badge"
  >
    <span
      className="sc-dkPtRN cdLppc"
      color="error"
    >
      8
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdvvtL dKoNSA sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
    className="sc-gsDKAQ bVtXRC sinoui-badge"
  >
    <span
      className="sc-dkPtRN kIZioj"
      color="error"
    >
      8
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdvvtL dKoNSA sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
    className="sc-gsDKAQ bVtXRC sinoui-badge"
  >
    <span
      className="sc-dkPtRN bRSccU"
      color="error"
    >
      8
    </span>
    <svg
      aria-hidden="true"
      className="sc-bdvvtL dKoNSA sinoui-svg-icon"
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
]
`;

exports[`Badge组件 快照测试 设置数字为0时显示 1`] = `
<span
  className="sc-gsDKAQ bVtXRC sinoui-badge"
>
  <span
    className="sc-dkPtRN cHnuob"
    color="error"
  >
    0
  </span>
  <svg
    aria-hidden="true"
    className="sc-bdvvtL dKoNSA sinoui-svg-icon"
    fill="currentColor"
    focusable="false"
    height={24}
    role="presentation"
    size={24}
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
    />
  </svg>
</span>
`;

exports[`Badge组件 快照测试 设置自定义badge的内容 1`] = `
<span
  className="sc-gsDKAQ bVtXRC sinoui-badge"
>
  <div
    className="sc-hKwDye bDxxZN sinoui-badge__content"
  >
    4
  </div>
  <svg
    aria-hidden="true"
    className="sc-bdvvtL dKoNSA sinoui-svg-icon"
    fill="currentColor"
    focusable="false"
    height={24}
    role="presentation"
    size={24}
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
    />
  </svg>
</span>
`;

exports[`Badge组件 快照测试 设置鼠标悬浮时显示的文字 1`] = `
<span
  className="sc-gsDKAQ bVtXRC sinoui-badge"
>
  <span
    className="sc-dkPtRN dAiBIr"
    color="error"
    title="文字"
  >
    1
  </span>
  <svg
    aria-hidden="true"
    className="sc-bdvvtL dKoNSA sinoui-svg-icon"
    fill="currentColor"
    focusable="false"
    height={24}
    role="presentation"
    size={24}
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
    />
  </svg>
</span>
`;
